docs/0.19/_sources/api/gammapy.irf.EnergyDependentMultiGaussPSF.rst.txt
EnergyDependentMultiGaussPSF
============================

.. currentmodule:: gammapy.irf

.. autoclass:: EnergyDependentMultiGaussPSF
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~EnergyDependentMultiGaussPSF.axes
      ~EnergyDependentMultiGaussPSF.data
      ~EnergyDependentMultiGaussPSF.default_interp_kwargs
      ~EnergyDependentMultiGaussPSF.is_offset_dependent
      ~EnergyDependentMultiGaussPSF.is_pointlike
      ~EnergyDependentMultiGaussPSF.quantity
      ~EnergyDependentMultiGaussPSF.required_axes
      ~EnergyDependentMultiGaussPSF.required_parameters
      ~EnergyDependentMultiGaussPSF.tag
      ~EnergyDependentMultiGaussPSF.unit

   .. rubric:: Methods Summary

   .. autosummary::

      ~EnergyDependentMultiGaussPSF.containment
      ~EnergyDependentMultiGaussPSF.containment_radius
      ~EnergyDependentMultiGaussPSF.cumsum
      ~EnergyDependentMultiGaussPSF.evaluate
      ~EnergyDependentMultiGaussPSF.evaluate_containment
      ~EnergyDependentMultiGaussPSF.evaluate_direct
      ~EnergyDependentMultiGaussPSF.evaluate_parameters
      ~EnergyDependentMultiGaussPSF.from_hdulist
      ~EnergyDependentMultiGaussPSF.from_table
      ~EnergyDependentMultiGaussPSF.info
      ~EnergyDependentMultiGaussPSF.integral
      ~EnergyDependentMultiGaussPSF.integrate_log_log
      ~EnergyDependentMultiGaussPSF.interp_missing_data
      ~EnergyDependentMultiGaussPSF.normalize
      ~EnergyDependentMultiGaussPSF.pad
      ~EnergyDependentMultiGaussPSF.peek
      ~EnergyDependentMultiGaussPSF.plot_containment_radius
      ~EnergyDependentMultiGaussPSF.plot_containment_radius_vs_energy
      ~EnergyDependentMultiGaussPSF.plot_psf_vs_rad
      ~EnergyDependentMultiGaussPSF.read
      ~EnergyDependentMultiGaussPSF.to_hdulist
      ~EnergyDependentMultiGaussPSF.to_psf3d
      ~EnergyDependentMultiGaussPSF.to_table
      ~EnergyDependentMultiGaussPSF.to_table_hdu
      ~EnergyDependentMultiGaussPSF.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: axes
   .. autoattribute:: data
   .. autoattribute:: default_interp_kwargs
   .. autoattribute:: is_offset_dependent
   .. autoattribute:: is_pointlike
   .. autoattribute:: quantity
   .. autoattribute:: required_axes
   .. autoattribute:: required_parameters
   .. autoattribute:: tag
   .. autoattribute:: unit

   .. rubric:: Methods Documentation

   .. automethod:: containment
   .. automethod:: containment_radius
   .. automethod:: cumsum
   .. automethod:: evaluate
   .. automethod:: evaluate_containment
   .. automethod:: evaluate_direct
   .. automethod:: evaluate_parameters
   .. automethod:: from_hdulist
   .. automethod:: from_table
   .. automethod:: info
   .. automethod:: integral
   .. automethod:: integrate_log_log
   .. automethod:: interp_missing_data
   .. automethod:: normalize
   .. automethod:: pad
   .. automethod:: peek
   .. automethod:: plot_containment_radius
   .. automethod:: plot_containment_radius_vs_energy
   .. automethod:: plot_psf_vs_rad
   .. automethod:: read
   .. automethod:: to_hdulist
   .. automethod:: to_psf3d
   .. automethod:: to_table
   .. automethod:: to_table_hdu
   .. automethod:: write
